# seneca-weblogistica

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/modules/: codegen.py  rpa_weblogistica.py
